# SuperModel

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src/: main.ts
apps/web/: package.json
apps/web/app/: page.tsx
crates/domain-contracts/: Cargo.toml
crates/domain-contracts/src/: lib.rs
crates/geometry-kernel/: Cargo.toml
crates/geometry-kernel/src/: lib.rs
db/migrations/: 001_mvp_core.sql  002_assembly_parts.sql
db/schema/: 001_initial_mvp_schema.sql
docs/architecture/: adapter-contracts.md  adr-001-monorepo-and-runtime-stack.md  api-surface.md  data-contracts.md  database-design.md  domain-model.md  implementation-plan.md  mvp-modules.md  persistence-versioning.md  revision-state-machine.md  system-architecture.md
docs/requirements/: brainstorming.md  mvp-scope.md  product-requirements.md
openspec/: AGENTS.md  project.md
openspec/changes/bootstrap-platform/: design.md  proposal.md  tasks.md
openspec/changes/decomposition-mvp/: design.md  proposal.md  tasks.md
openspec/specs/assembly-knowledge/: spec.md
openspec/specs/assembly-part-graph/: spec.md
openspec/specs/connector-engineering/: spec.md
openspec/specs/data-contracts/: spec.md
openspec/specs/design-workbench/: spec.md
openspec/specs/part-decomposition/: spec.md
python/optimization/: README.md  pyproject.toml
python/optimization/src/optimization/: __init__.py
services/design-orchestrator/: README.md  package.json  tsconfig.json  vitest.config.ts
(+34 files in other folders)
